--- a/index.html
+++ b/index.html
@@ -233,25 +233,25 @@
     </section>
 
     <section id="loja">
-      <h2>Shop</h2>
+      <h2>PromoLoot GRN</h2>
       <section class="produtos">
         <article class="produto">
-          <img src="./loja/img-shop/stick.jpg" alt="Adesivos holográficos Kiss-Cut Guarini" />
-          <h3>Holographic Kiss-Cut Stickers</h3>
-          <p class="preco">$ 11,00</p>
-          <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5571571">Buy</button>
+        <img src="./loja/img-shop/curso-lobo.png" alt="Curso e-sports" />
+        <h3>Do Amador ao Competitivo</h3>
+        <p class="preco">R$ 29,90</p>
+        <button type="button" class="btn-comprar" data-link="https://go.hotmart.com/P103681152Q">Buy</button>
         </article>
         <article class="produto">
-          <img src="./loja/img-shop/garrafinha.jpg" alt="Garrafa de água Guarini" />
-          <h3>Stainless Steel Water Bottle</h3>
-          <p class="preco">$ 30,00</p>
-          <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5023084">Buy</button>
+        <img src="./loja/img-shop/fone.jpg" alt="Fone de Ouvido Bluetooth" />
+        <h3>Fone de Ouvido Bluetooth</h3>
+        <p class="preco">R$ 94,96</p>
+        <button type="button" class="btn-comprar" data-link="https://amzn.to/3L4yIt3">Buy</button>
         </article>
         <article class="produto">
-          <img src="./loja/img-shop/caneca.jpg" alt="Caneca Guarini" />
-          <h3>Travel Mug with Handle</h3>
-          <p class="preco">$ 29,00</p>
-          <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5023087">Buy</button>
+        <img src="./loja/img-shop/not-gameracer.jpg" alt="Notebook Gamer Acer Nitro" />
+        <h3>Notebook Gamer Acer Nitro</h3>
+        <p class="preco">R$ 5.799,00</p>
+        <button type="button" class="btn-comprar" data-link="https://mercadolivre.com/sec/2K26btZ">Buy</button>
         </article>
       </section>
     </section>
