--- a/loja/loja.html
+++ b/loja/loja.html
@@ -104,7 +104,7 @@ function googleTranslateElementInit() {
   </div>
 
   <main>
-    <h2>Official Shop Guariní</h2>
+    <h2>PromoLoot GRN</h2>
     <section class="produtos">
       <article class="produto">
         <img src="./img-shop/curso-lobo.png" alt="Curso e-sports" />
@@ -116,29 +116,29 @@ function googleTranslateElementInit() {
       <article class="produto">
         <img src="./img-shop/fone.jpg" alt="Fone de Ouvido Bluetooth" />
         <h3>Fone de Ouvido Bluetooth</h3>
-        <p class="preco">R$ 68,58</p>
+        <p class="preco">R$ 94,96</p>
         <button type="button" class="btn-comprar" data-link="https://amzn.to/3L4yIt3">Buy</button>
       </article>
 
       <article class="produto">
         <img src="./img-shop/not-lenovo.jpg" alt="Notebook Lenovo" />
         <h3>Notebook Lenovo</h3>
-        <p class="preco">R$ 2.699,10</p>
+        <p class="preco">R$ 2.789,00</p>
         <button type="button" class="btn-comprar" data-link="https://mercadolivre.com/sec/1ga48PA">Buy</button>
       </article>
 
       <article class="produto">
         <img src="./img-shop/not-gameracer.jpg" alt="Notebook Gamer Acer Nitro" />
         <h3>Notebook Gamer Acer Nitro</h3>
-        <p class="preco">R$ 5.509,05</p>
+        <p class="preco">R$ 5.799,00</p>
         <button type="button" class="btn-comprar" data-link="https://mercadolivre.com/sec/2K26btZ">Buy</button>
       </article>
 
       <article class="produto">
-        <img src="./img-shop/caderno.jpg" alt="Caderno espiral Guariní" />
-        <h3> Spiral Notebook</h3>
-        <p class="preco">$ 20,00</p>
-        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5609860">Buy</button>
+        <img src="./img-shop/pilha.jpg" alt="Pilhas Recarregáveis com Carregador" />
+        <h3> Pilhas Recarregáveis com Carregador</h3>
+        <p class="preco">R$ 157,00</p>
+        <button type="button" class="btn-comprar" data-link="https://amzn.to/3ZrH7dq">Buy</button>
       </article>
 
       <article class="produto">
