--- a/loja/loja.html
+++ b/loja/loja.html
@@ -142,66 +142,66 @@ function googleTranslateElementInit() {
       </article>
 
       <article class="produto">
-        <img src="./img-shop/garrafinha.jpg" alt="Garrafa de água Guariní" />
-        <h3>Stainless Steel Water Bottle</h3>
-        <p class="preco">$ 30,00</p>
-        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5023084">Buy</button>
+        <img src="./img-shop/undertale.jpg" alt="Undertale Midia Fisica Nintendo Switch" />
+        <h3>Undertale Midia Fisica Nintendo Switch</h3>
+        <p class="preco">R$ 261,00</p>
+        <button type="button" class="btn-comprar" data-link="https://mercadolivre.com/sec/2pjvUN6">Buy</button>
       </article>    
 
       <article class="produto">
-        <img src="./img-shop/caneca.jpg" alt="Caneca Guariní" />
-        <h3>Travel Mug with Handle</h3>
-        <p class="preco">$ 29,00</p>
-        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5023087">Buy</button>
+        <img src="./img-shop/procontroller2.jpg" alt="Nintendo Switch 2 Pro Controller" />
+        <h3>Nintendo Switch 2 Pro Controller</h3>
+        <p class="preco">R$ 654,80</p>
+        <button type="button" class="btn-comprar" data-link="https://amzn.to/4pPdYUt">Buy</button>
       </article>  
 
       <article class="produto">
-        <img src="./img-shop/copo-canudo.jpg" alt="Copo de aço Guariní" />
-        <h3>Stainless Steel Tumbler</h3>
-        <p class="preco">$ 31,00</p>
-        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5609869">Buy</button>
+        <img src="./img-shop/rd2.jpg" alt="Red Dead Redemption 2 Ps4 Midia Fisica" />
+        <h3>Red Dead Redemption 2 Ps4 Midia Fisica</h3>
+        <p class="preco">R$ 145,39</p>
+        <button type="button" class="btn-comprar" data-link="https://mercadolivre.com/sec/1TuBXNx">Buy</button>
       </article> 
 
       <article class="produto">
-        <img src="./img-shop/copo.jpg" alt="Copo Guariní" />
-        <h3>Wine Cup</h3>
-        <p class="preco">$ 26,00</p>
-        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5609865">Buy</button>
+        <img src="./img-shop/mgs5.jpg" alt="Metal Gear Solid Delta Snake Eater Tactical Ed. Ps5 Fisico" />
+        <h3>Metal Gear Solid Delta Snake Eater Tactical Ed. Ps5 Fisico</h3>
+        <p class="preco">R$ 299,89</p>
+        <button type="button" class="btn-comprar" data-link="https://mercadolivre.com/sec/2HqEeva">Buy</button>
       </article> 
 
       <article class="produto">
-        <img src="./img-shop/apple-arte.jpg" alt="Capa Snap para iPhone Guariní" />
-        <h3>Snap Case for iPhone</h3>
-        <p class="preco">$ 22,00</p>
-        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5609863">Buy</button>
+        <img src="./img-shop/acs.jpg" alt="Assassins Creed Shadows Midia Fisica Nintendo Switch" />
+        <h3>Assassins Creed Shadows Midia Fisica Nintendo Switch</h3>
+        <p class="preco">R$ 399,89</p>
+        <button type="button" class="btn-comprar" data-link="https://mercadolivre.com/sec/2iQPjqN">Buy</button>
       </article> 
 
       <article class="produto">
-        <img src="./img-shop/samgung-arte.jpg" alt="Capa Snap para Samsung Guariní" />
-        <h3>Snap Case for Samsung</h3>
-        <p class="preco">$ 22,00</p>
-         <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5571581">Buy</button>
+        <img src="./img-shop/headphilips.jpg" alt="Headphone Bluetooth PHILIPS" />
+        <h3>Headphone Bluetooth PHILIPS</h3>
+        <p class="preco">R$ 161,31</p>
+         <button type="button" class="btn-comprar" data-link="https://amzn.to/4bSQgTE">Buy</button>
       </article> 
 
       <article class="produto">
-        <img src="./img-shop/apple-transparente.jpg" alt="Capa transparente para iPhone Guariní" />
-        <h3>Clear Case for iPhone</h3>
-        <p class="preco">$ 18,00</p>
-        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5571559">Buy</button>
+        <img src="./img-shop/mouserd.jpg" alt="Mouse Gamer Redragon K1ng 1K" />
+        <h3>Mouse Gamer Redragon K1ng 1K</h3>
+        <p class="preco">R$ 95,99</p>
+        <button type="button" class="btn-comprar" data-link="https://amzn.to/4pWAavM">Buy</button>
       </article>
 
       <article class="produto">
-        <img src="./img-shop/samsung-transparente.jpg" alt="Capa transparente para Samsung Guariní" />
-        <h3>Clear Case for Samsung</h3>
-        <p class="preco">$ 17,00</p>
-        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5571557">Buy</button>
+        <img src="./img-shop/tecladord.jpg" alt="Teclado Mecanico Redragon Fizz" />
+        <h3>Teclado Mecanico Redragon Fizz</h3>
+        <p class="preco">R$ 199,98</p>
+        <button type="button" class="btn-comprar" data-link="https://amzn.to/3LNMSPm">Buy</button>
       </article> 
 
       <article class="produto">
-        <img src="./img-shop/stick.jpg" alt="Adesivos holográficos Kiss-Cut Guariní" />
-        <h3>Holographic Kiss-Cut Stickers</h3>
-        <p class="preco">$ 11,00</p>
-        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5571571">Buy</button>
+        <img src="./img-shop/mochila.jpg" alt="Mochila Lenovo para notebook" />
+        <h3>Mochila Lenovo para notebook</h3>
+        <p class="preco">R$ 67,15</p>
+        <button type="button" class="btn-comprar" data-link="https://amzn.to/4bjEstH">Buy</button>
       </article>
 
     </section>
