--- a/course/marketplace.html
+++ b/course/marketplace.html
@@ -303,7 +303,7 @@
   <main>
     <div class="marketplace-header">
       <h1>🎮 Cursos e Mentorias</h1>
-      <p>Aprenda com os melhores jogadores profissionais</p>
+      <p>Aprenda com os melhores jogadores profissionais teste</p>
     </div>
 
     <div class="filter-buttons">
