--- a/material.html
+++ b/material.html
@@ -184,7 +184,7 @@ function googleTranslateElementInit() {
     'greninja', 'gyarados', 'megagyarados','hooh', 'hoopa', 'inteleon', 'lapras', 'latias', 'latios', 'leafeon',
     'lucario', 'megalucario', 'machamp', 'mamoswine', 'meowscara', 'meowth', 'metagross', 'mew', 'mewtwox', 'mewtwoy',
     'mimikyu', 'miraidon', 'mrmime', 'ninetales', 'pawmot', 'pikachu', 'psyduck', 'raichu', 'rapidash',
-    'sableye', 'scizor', 'slowbro', 'snorlax', 'suicune', 'sylveon', 'talonflame',
+    'sableye', 'scizor', 'sirfetch','slowbro', 'snorlax', 'suicune', 'sylveon', 'talonflame',
     'tinkaton', 'trevenant', 'tsareena', 'tyranitar', 'umbreon', 'urshifu', 'vaporeon',
     'venusaur', 'wigglytuff', 'zacian', 'zeraora', 'zoroark'
   ];
