--- a/createdbuilds.html
+++ b/createdbuilds.html
@@ -845,7 +845,7 @@
       'greninja', 'gyarados', 'hooh', 'hoopa', 'inteleon', 'lapras', 'latias', 'latios', 'leafeon',
       'lucario', 'megalucario', 'machamp', 'mamoswine', 'meowscara', 'metagross', 'mew', 'mewtwox', 'mewtwoy',
       'mimikyu', 'miraidon', 'mrmime', 'ninetales', 'pawmot', 'pikachu', 'psyduck', 'raichu', 'rapidash',
-      'sableye', 'scizor', 'slowbro', 'snorlax', 'suicune', 'sylveon', 'talonflame',
+      'sableye', 'scizor', 'sirfetch', 'slowbro', 'snorlax', 'suicune', 'sylveon', 'talonflame',
       'tinkaton', 'trevenant', 'tsareena', 'tyranitar', 'umbreon', 'urshifu', 'vaporeon',
       'venusaur', 'wigglytuff', 'zacian', 'zeraora', 'zoroark'
     ];
