--- a/jogos/jogo-do-tapete/tapete-magico.html
+++ b/jogos/jogo-do-tapete/tapete-magico.html
@@ -720,6 +720,8 @@
 </head>
 <body>
 
+<a href="https://guariniesports.com.br/groups/groups.html" style="position:fixed;top:14px;left:20px;z-index:999;font-family:'Fredoka One',cursive;font-size:1rem;color:rgba(255,255,255,0.75);text-decoration:none;background:rgba(0,0,0,0.3);border:1px solid rgba(255,255,255,0.15);border-radius:50px;padding:7px 18px;backdrop-filter:blur(8px);transition:all 0.2s;" onmouseover="this.style.color='#ffd700';this.style.borderColor='rgba(255,215,0,0.4)'" onmouseout="this.style.color='rgba(255,255,255,0.75)';this.style.borderColor='rgba(255,255,255,0.15)'">← Voltar ao Site</a>
+
 <div id="fake-cursor"></div>
 <div id="stars-container"></div>
 <div class="moon"></div>
