--- a/groups/groups.html
+++ b/groups/groups.html
@@ -166,7 +166,7 @@ function googleTranslateElementInit() {
         <h3>Games Tupixel</h3>
         <p class="descricao">Check out our games</p>
         <button type="button" class="btn-comprar" id="quizBtn">Open</button>
-        <div id="buildAccessMessage" style="color: red; margin-top: 10px; display: none;"></div>
+        <div id="quizAccessMessage" style="color: red; margin-top: 10px; display: none;"></div>
       </article>
 
       <!-- Slot vazio para futura Comunidade -->
@@ -175,7 +175,7 @@ function googleTranslateElementInit() {
         <h3>Bingo Announcement</h3>
         <p class="descricao">Choose your bingo</p>
         <button type="button" class="btn-comprar" id="bingoBtn">Open</button>
-        <div id="buildAccessMessage" style="color: red; margin-top: 10px; display: none;"></div>
+        <div id="bingoAccessMessage" style="color: red; margin-top: 10px; display: none;"></div>
       </article>
 
       <!-- Slot vazio para futura Comunidade -->
